2004-09-05  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_substitute_syscall): Do not
	substitute timing calls if the system timer has not been started.

	* nucleus/pod.c (xnpod_fault_handler): Make sure we propagate
	faults over shadows to Linux after they have been relaxed.

2004-09-04  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_calibrate_timer): Fix the way we
	calibrate the APIC programming time; the old way simply broke any
	SMP setup.

2004-09-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Make the calibration
	thread struct static, so that we can't get a TCB with a badly
	aligned FPU area.

2004-09-03  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-(i386|ppc)/system.h (__xnlock_get_irqsave):
	Avoid to enable interrupts in nested critical sections.

2004-09-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c: Use standard PIT_xx defines instead of
	immediate port values.

 	* RELEASE: fusion-0.5

2004-09-01  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Get rid of CONFIG_RTAI_HW_NRCPUS and use the
	Linux-defined constant instead.

	* arch/ppc/patches: Update Adeos support to 2.6.8rc1-r6c5.

	* include/nucleus/asm-ppc/atomic.h: Fix register notations in
	inline assembly.

	* arch/*/defconfig: Rebuild sane defconfigs.

	* nucleus/pod.c (xnpod_calibration_thread): Calibrate during 0.3s
	regardless of the calibration period. Also provide for adjusting
	the estimated average jitter on a per-architecture basis.

	* nucleus/timer.c (xntimer_do_timers): Refresh the tested clock
	value in aperiodic mode after each timer processing loop.

	* arch/*/hal/hal.c (rthal_set_irq_affinity): Replace reset action
	by returning the old cpumask.

2004-08-31  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Straighten error path.
	(xnpod_calibrate_sched): Disable autocalibration of the scheduling